lib/jazz.sample/src/jazz/sample/error/_error.jazz
;;;==============
;;;  JazzScheme
;;;==============
;;;
;;;; Errors
;;;


(library jazz.sample.error jazz


(import (jazz.sample.error.lib))


@ok (
       a
   b
              c


(if)
(set! Yo 2))


(class X extends Object
  
  (generic (f)))


@bad
(class Outer extends Object
  (class Inner extends Object))


@ok
(class No-Ascendant)


@bad (
(specific (f))

(class X extends Object)
(class A extends Object)

(generic (f (<X> x) i))
(specific (f (<A> a) i))
(specific (f (<A> a) i j))

(class X extends Object
  
  (generic (f))
  (specific (f)))


(class Metaclass extends Class)
(class Ambiguous metaclass Metaclass extends Object
  
  (method meta (f)
    ))))
